# EntreRimas

./: .gitignore  Dockerfile  SitePoesias.cabal  render.yaml
app/Database/: Queries.hs
app/Server/: Handler.hs
app/Types/: Examples.hs  Models.hs
backend/: CHANGELOG.md  Dockerfile  LICENSE  SitePoesias.cabal
backend/app/: Main.hs
backend/app/Database/: Queries.hs
backend/app/Server/: Handler.hs
backend/app/Types/: Models.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
frontend/: app.jsx  index.html  tweaks-panel.jsx
