cabal-version:      3.14
name:               SitePoesias
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             JoaoPAmanda
maintainer:         yida.amanda@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable SitePoesias
    import:           warnings
    main-is:          Main.hs
    other-modules:    Server.Handler
                      Types.Examples
    -- other-extensions:
    build-depends:    base,
                      wai,
                      warp,
                      servant,
                      servant-server
    hs-source-dirs:   app
    default-language: Haskell2010
