cabal-version:      3.14
name:               SitePoesias
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             JoaoPAmanda
maintainer:         yida.amanda@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

executable SitePoesias
    import:           warnings
    main-is:          Main.hs
    other-modules:    Server.Handler
                      Types.Models
                      Database.Queries
    build-depends:    base,
                      servant,
                      aeson,
                      warp,
                      servant-server,
                      wai-cors,
                      wai,
                      wai-app-static,
                      postgresql-simple,
                      bytestring,
                      mtl
    hs-source-dirs:   app
    default-language: Haskell2010
